--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.7.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
